--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,7 @@
-<h1>Bookersとは、、、</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>Bookersについて</h1>
+    </div>
+  </div>
+</div>
