make_about_page

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,5 +3,9 @@
     <div class="col-md-3">
       <h1>Bookersについて</h1>
     </div>
+    <div class="col-md-3">
+      <p>Bookersとは、今までに読んできた書籍に関する意見や感想を投稿し</p>
+      <p>さまざまな人々と、情報を交換することができます。</p>
+    </div>
   </div>
 </div>
