--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,7 @@
-<h1>Welcome to Bookers</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <h1>Welcome to Bookers !!</h1>
+        </div>
+    </div>
+</div>
