--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-3">
             <h1>Welcome to Bookers !!</h1>
+            <h2>書籍の世界にようこそ！！</h2>
         </div>
     </div>
 </div>
