make_link_at_top_page

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,17 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <h1>Welcome to Bookers !!</h1>
-            <h2>書籍の世界にようこそ！！</h2>
+            <div>
+                <h1>Welcome to Bookers !!</h1>
+                <h2>書籍の世界にようこそ！！</h2>
+            </div>
+
+            <div>
+                <%= link_to "Start",books_path %>
+                <%= link_to "About",home_about_path %>
+            </div>
+
+
         </div>
     </div>
 </div>
