add_color_to_btn_in_top

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,8 +7,8 @@
             </div>
 
             <div>
-                <%= link_to "Start",books_path %>
-                <%= link_to "About",home_about_path %>
+                <%= link_to "Start",books_path, class:"btn btn-success" %>
+                <%= link_to "About",home_about_path, class:"btn btn-primary" %>
             </div>
 
 
