--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,9 +3,15 @@
     <div class="col-md-3">
       <h1>Bookersについて</h1>
     </div>
-    <div class="col-md-3">
+
+    <div>
       <p>Bookersとは、今までに読んできた書籍に関する意見や感想を投稿し</p>
       <p>さまざまな人々と、情報を交換することができます。</p>
     </div>
+
+    <div>
+      <%= link_to "Back" ,root_path, class:"btn btn-danger" %>
+    </div>
+
   </div>
 </div>
