--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -7,6 +7,7 @@
     <div>
       <p>Bookersとは、今までに読んできた書籍に関する意見や感想を投稿し</p>
       <p>さまざまな人々と、情報を交換することができます。</p>
+      <p>それでは本の世界をお楽しみください！！！</p>
     </div>
 
     <div>
