--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,27 @@
   <div class="row">
     <div class="col">
       <h2>Index Book</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>title</th>
+            <th>body</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <% @books.each do |book| %>
+          <tr>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+            <td><%= link_to "Show",book_path(book.id) %></td>
+            <td><%= link_to "Edit",edit_book_path(book_path) %></td>
+            <td><%= link_to "Destroy", book_path(book_path), method: :delete %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
