--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,13 @@
   <div class="row">
     <div class="col">
       <h2>Detail Book</h2>
+      <h2>title</h2>
+      <%= @book.title %>
+      <h2>body</h2>
+      <%= @book.body %>
+      <%= link_to "Edit", edit_book_path %>
+       |
+      <%= link_to "Back",books_path %>
     </div>
   </div>
 </div>
