--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,9 +6,9 @@
       <%= @book.title %>
       <h2>body</h2>
       <%= @book.body %>
-      <%= link_to "Edit", edit_book_path %>
+      <%= link_to "Edit", edit_book_path,class:"btn btn-success" %>
        |
-      <%= link_to "Back",books_path %>
+      <%= link_to "Back",books_path, class:"btn btn-danger" %>
     </div>
   </div>
 </div>
