--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,15 +10,15 @@
             <th colspan="3"></th>
           </tr>
         </thead>
-        
+
         <tbody>
           <% @books.each do |book| %>
           <tr>
             <td><%= book.title %></td>
             <td><%= book.body %></td>
-            <td><%= link_to "Show",book_path(book.id) %></td>
-            <td><%= link_to "Edit",edit_book_path(book_path) %></td>
-            <td><%= link_to "Destroy", book_path(book_path), method: :delete %></td>
+            <td><%= link_to "Show",book_path(book.id), class:"btn btn-success" %></td>
+            <td><%= link_to "Edit",edit_book_path(book_path), class:"btn btn-primary" %></td>
+            <td><%= link_to "Destroy", book_path(book_path), method: :delete, class:"btn btn-danger" %></td>
           </tr>
           <% end %>
         </tbody>
