--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,13 @@
   <div class="row">
     <div class="col">
       <h2>Edit Book</h2>
+      <%= form_with model:@book, local:true |f| do %>
+      <h2>title</h2>
+      <%= f.text_field:title %>
+      <h2>body</h2>
+      <%= f.text_area:body %>
+      <%= f.submit"Update Book" %>
+      <% end %>
     </div>
   </div>
 </div>
