add_btn_to_edit_page

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,6 +8,9 @@
       <h2>body</h2>
       <%= f.text_area:body %>
       <%= f.submit"Update Book" %>
+      <%= link_to "Show",book_path(@book.id) %>
+       |
+      <%= link_to "Back",books_path %>
       <% end %>
     </div>
   </div>
