--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,9 +8,9 @@
       <h2>body</h2>
       <%= f.text_area:body %>
       <%= f.submit"Update Book" %>
-      <%= link_to "Show",book_path(@book.id) %>
+      <%= link_to "Show",book_path(@book.id),class:"btn btn-success" %>
        |
-      <%= link_to "Back",books_path %>
+      <%= link_to "Back",books_path, class:"btn btn-danger" %>
       <% end %>
     </div>
   </div>
