make_create_in_index_page

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,18 @@
           <% end %>
         </tbody>
       </table>
+      </div>
+
+      <div class:"create">
+        <h2>Create Book</h2>
+        <%= form_with model:@book, local:true do |f| %>
+        <h3>title</h3>
+        <%= f.text_field:title %>
+        <h3>body</h3>
+        <%= f.text_area:body %>
+        <%= f.submit"Create Book" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
