make_btn_create_coner

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,7 +32,7 @@
         <%= f.text_field:title %>
         <h3>body</h3>
         <%= f.text_area:body %>
-        <%= f.submit"Create Book" %>
+        <%= f.submit"Create Book", class:"btn btn-success" %>
         <% end %>
       </div>
     </div>
