--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,7 +7,7 @@
       <%= f.text_field:title %>
       <h2>body</h2>
       <%= f.text_area:body %>
-      <%= f.submit"Update Book" %>
+      <%= f.submit"Update Book",class:"btn btn-success" %>
       <%= link_to "Show",book_path(@book.id),class:"btn btn-success" %>
        |
       <%= link_to "Back",books_path, class:"btn btn-danger" %>
