--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -11,6 +11,7 @@
     </div>
 
     <div>
+      <%= link_to "Start", books_path, class:"btn btn-success" %>
       <%= link_to "Back" ,root_path, class:"btn btn-danger" %>
     </div>
 
